custom name to log file

--- a/logging.conf
+++ b/logging.conf
@@ -4,14 +4,14 @@
 keys=root
 
 [handlers]
-keys=consoleHandler,fileHandler
+keys=consoleHandler
 
 [formatters]
-keys=consoleFormatter,fileFormatter
+keys=consoleFormatter
 
 [logger_root]
 level=DEBUG
-handlers=consoleHandler,fileHandler
+handlers=consoleHandler
 
 [handler_consoleHandler]
 class=StreamHandler
@@ -19,16 +19,7 @@ level=DEBUG
 formatter=consoleFormatter
 args=(sys.stdout,)
 
-[handler_fileHandler]
-class=FileHandler
-level=ERROR
-formatter=fileFormatter
-args=('log.log',)
 
 [formatter_consoleFormatter]
 format=%(asctime)-8s.%(msecs)03d || %(name)s || %(levelname)s || %(message)s
-datefmt=%Y-%b-%d %H:%M:%S
-
-[formatter_fileFormatter]
-format=%(asctime)-16s || %(name)s || %(process)d || %(levelname)s || %(message)s
 datefmt=%Y-%b-%d %H:%M:%S
