--- a/logging.conf
+++ b/logging.conf
@@ -15,10 +15,9 @@ handlers=consoleHandler
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=consoleFormatter
 args=(sys.stdout,)
-
 
 [formatter_consoleFormatter]
 format=%(asctime)-8s.%(msecs)03d || %(name)s || %(levelname)s || %(message)s
