--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -21,4 +21,4 @@ args=(sys.stdout,)
 
 [formatter_consoleFormatter]
 format=%(asctime)-8s.%(msecs)03d || %(name)s || %(levelname)s || %(message)s
-datefmt=%Y-%b-%d %H:%M:%S
+datefmt=%Y-%m-%d %H:%M:%S
