add test_code and start pypi build after test

--- a/.github/workflows/build-pipy.yml
+++ b/.github/workflows/build-pipy.yml
@@ -14,7 +14,7 @@ on:
   pull_request:
 
   workflow_run:
-    workflows: ["Docker Build and Publish"]
+    workflows: ["Test Python Code"]
     types:
       - completed
 
