--- a/.github/workflows/build-pipy.yml
+++ b/.github/workflows/build-pipy.yml
@@ -56,7 +56,7 @@ jobs:
           name: pypi_artifacts 
 
       - name: Publish package
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        if: ${{ startsWith('refs/tags/v', github.ref) }}
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
