--- a/.github/workflows/build-pipy.yml
+++ b/.github/workflows/build-pipy.yml
@@ -55,8 +55,9 @@ jobs:
         with:
           name: pypi_artifacts 
 
-      - name: Echo gitref
-        run: echo ${{ github.ref }}
+      - name: Echo ref
+        if: ${{ github.event_name == 'create' && github.event.ref_type == 'tag' }}
+        run: echo "Deploying tag ${{ github.ref }}"
 
       - name: Publish package
         if: ${{ startsWith('refs/tags', github.ref) }}
