--- a/.github/workflows/build-pipy.yml
+++ b/.github/workflows/build-pipy.yml
@@ -56,7 +56,7 @@ jobs:
           name: pypi_artifacts 
 
       - name: Echo ref
-        if: ${{ github.event_name == 'create' && github.event.ref_type == 'tag' }}
+        if: ${{ github.event.ref_type == 'tag' }}
         run: echo "Deploying tag ${{ github.ref }}"
 
       - name: Publish package
