--- a/.github/workflows/build-pipy.yml
+++ b/.github/workflows/build-pipy.yml
@@ -56,7 +56,7 @@ jobs:
           name: pypi_artifacts 
 
       - name: Echo ref
-        if: ${{ startsWith('refs/tags', github.ref) }}
+        if: startsWith('refs/tags', github.ref)
         run: echo "Deploying tag ${{ github.ref }}"
 
       - name: Publish package
