--- a/.github/workflows/build-pipy.yml
+++ b/.github/workflows/build-pipy.yml
@@ -55,17 +55,13 @@ jobs:
         with:
           name: pypi_artifacts 
 
-      - name: Echo ref
-        if: startsWith(github.ref, 'refs/tags/')
-        run: echo "Deploying tag ${{ github.ref }}"
-
       - name: Publish package
-        if: ${{ startsWith('refs/tags', github.ref) }}
+        if: startsWith(github.ref, 'refs/tags/')
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
+          # repository_url: https://test.pypi.org/legacy/
           packages_dir: dist/
           verify_metadata: false
           verbose: true
