--- a/.github/workflows/build-pipy.yml
+++ b/.github/workflows/build-pipy.yml
@@ -4,7 +4,7 @@ on:
   push:
     # Publish `master` as Docker `latest` image.
     branches:       # See https://stackoverflow.com/questions/57699839/github-actions-how-to-target-all-branches-except-master for choices
-      - '**'        # matches every branch
+      - '!master'        # branch except master
 
     # Publish `v1.2.3` tags as releases.
     tags:
@@ -12,11 +12,6 @@ on:
 
   # Run tests for any PRs.
   pull_request:
-
-  workflow_run:
-    workflows: ["Test Python Code"]
-    types:
-      - completed
 
 env:
   # TODO: Change variable to your image's name.
