update workflow to run on specific branches

--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -5,6 +5,9 @@ on:
     # Publish `master` as Docker `latest` image.
     branches:       # See https://stackoverflow.com/questions/57699839/github-actions-how-to-target-all-branches-except-master for choices
       - '!master'        # matches every branch
+      - 'feature/*'
+      - 'hotfix/*'
+      - 'release/*'
 
     # Publish `v1.2.3` tags as releases.
     tags:
