--- a/.github/workflows/build-pipy.yml
+++ b/.github/workflows/build-pipy.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Build Package
         run: make build
 
+      - name: Build Documentation
+        run: make html
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
