--- a/.github/workflows/build-pipy.yml
+++ b/.github/workflows/build-pipy.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Build Package
         run: make build
 
+      - name: Install Sphinx
+        run: pip install sphinx sphinx_rtd_theme
+
       - name: Build Documentation
         run: make html
 
