--- a/.github/workflows/test_code.yml
+++ b/.github/workflows/test_code.yml
@@ -4,17 +4,10 @@ on:
   push:
     # Publish `master` as Docker `latest` image.
     branches:       # See https://stackoverflow.com/questions/57699839/github-actions-how-to-target-all-branches-except-master for choices
-      - '!master'        # matches every branch
+      - 'bugfix/*'
       - 'feature/*'
       - 'hotfix/*'
       - 'release/*'
-
-    # Publish `v1.2.3` tags as releases.
-    tags:
-      - v*
-
-  # Run tests for any PRs.
-  pull_request:
 
 jobs:
   test:
